// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tab/> renders a button 1`] = `
<span
  className="tab_oe67rv"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton_17c4m1l"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders disabled 1`] = `
<span
  className="tab_oe67rv-o_O-tab_disabled_12oo6iq"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton_17c4m1l"
      disabled={true}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders selected 1`] = `
<span
  className="tab_oe67rv-o_O-tab_selected_dfv9v3"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={true}
      className="tabButton_17c4m1l"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;

exports[`<Tab/> renders stretched 1`] = `
<span
  className="tab_oe67rv-o_O-tab_stretched_bc4egv"
>
  <TrackingBoundary
    name="Default"
  >
    <ButtonOrLink
      aria-selected={false}
      className="tabButton_17c4m1l"
      onClick={[Function]}
      role="tab"
    >
      Tab
    </ButtonOrLink>
  </TrackingBoundary>
</span>
`;
